--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "com.chauthai.swipereveallayout"
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 7
         versionName "1.4.0"
     }
@@ -20,9 +19,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile project(':swipe-reveal-layout')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:24.2.0'
+    implementation 'com.android.support:design:24.2.0'
+    implementation 'com.android.support:recyclerview-v7:24.2.0'
+    implementation project(':swipe-reveal-layout')
 }
