--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -20,8 +20,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:24.2.0'
-    implementation 'com.android.support:design:24.2.0'
-    implementation 'com.android.support:recyclerview-v7:24.2.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation project(':swipe-reveal-layout')
 }
