--- a/swipe-reveal-layout/build.gradle
+++ b/swipe-reveal-layout/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
+
+group='com.github.ZupersoftSolutions'
 
 android {
     compileSdkVersion 29
@@ -8,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 8
-        versionName "1.4.1"
+        versionCode 200
+        versionName "2.0.0"
     }
     buildTypes {
         release {
@@ -21,32 +22,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:support-v4:24.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
-
-ext {
-    bintrayRepo = 'maven'
-    bintrayName = 'swipe-reveal-layout'
-
-    publishedGroupId = 'com.chauthai.swipereveallayout'
-    libraryName = 'SwipeRevealLayout'
-    artifact = 'swipe-reveal-layout'
-
-    libraryDescription = 'Easy, fast and powerful Swipe Layout for Android'
-
-    siteUrl = 'https://github.com/chthai64/SwipeRevealLayout'
-    gitUrl = 'https://github.com/chthai64/SwipeRevealLayout.git'
-
-    libraryVersion = '1.4.1'
-
-    developerId = 'chthai64'
-    developerName = 'Chau Thai'
-    developerEmail = 'chthai64@gmail.com'
-
-    licenseName = 'The MIT License (MIT)'
-    licenseUrl = 'https://opensource.org/licenses/MIT'
-    allLicenses = ["MIT"]
-}
-
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
